--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,11 +12,7 @@ jobs:
       with:
         submodules: 'recursive'
     - uses: actions/setup-node@v2
-      with:
-        node-version: '16.x'
-        cache: 'yarn'
-    - run: yarn install
-    - run: yarn build
-    - run: yarn publish
+    - run: node ./build.js && node ./copy-files.js
+    - run: cd build && npm publish --access=public
       env:
         NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
