--- a/package.json
+++ b/package.json
@@ -18,6 +18,6 @@
   "scripts": {
     "update": "git submodule update --remote",
     "build": "node ./build.js",
-    "release": "node ./update.js && node ./build.js && npm version patch && node ./copy-files.js && cd ./build && npm publish --access=public"
+    "release": "git submodule update --remote && node ./build.js && npm version patch && node ./copy-files.js && cd ./build && npm publish --access=public"
   }
 }
