generate index during build

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "bugs": {
     "url": "https://github.com/jprochazk/svelte-material-icons/issues"
   },
+  "svelte": "index.js",
   "keywords": [
     "svelte",
     "material",
